MOBILE-4595 a11y: Fix placeholder color contrast

--- a/src/theme/theme.design-system.scss
+++ b/src/theme/theme.design-system.scss
@@ -146,7 +146,7 @@
     --mdl-button-disabled-opacity: 0.6;
     --mdl-input-disabled-opacity: 0.6;
     --mdl-item-disabled-opacity: 0.4;
-    --mdl-placeholder-opacity: 0.6;
+    --mdl-placeholder-opacity: 0.8;
 
     // ***** ACCESSIBILITY ***** //
     --a11y-sizing-minTargetSize: 44px;
